# pygame-matplotlib-backend

./: .gitignore  LICENSE  README.md  examples.py  pyproject.toml  setup.cfg  test.py  test_blitting.py  test_blitting_class.py  test_gui_window.py  test_in_pygame.py  test_plt.py  test_save.py  test_show.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: basic.py  blitting.py  blitting_class.py  gui_window.py  rotation.py  save_to_file.py  show.py  show_in_gameloop.py  text.py
pygame_matplotlib/: __init__.py  backend_pygame.py  gui_window.py
tests/: test_blitting.py  test_blitting_class.py  test_gui_window.py  test_mpl_functionalities.py  test_save_to_file.py  test_show.py  test_show_in_gameloop.py
