[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygame-matplotlib"
version = "VERSION_PLACEHOLDER"
dependencies = [
    "matplotlib",
    "pygame_gui",
]
requires-python = ">= 3.9"
authors = [
  {name = "Lionel42"},
]
description = "A matplotlib backend using pygame."
readme = "README.md"
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "matplotlib",
    "pygame",
    "backend",
    "plot",
]

# Self register the backend in matplotlib
[project.entry-points."matplotlib.backend"]
pygame = "pygame_matplotlib.backend_pygame"


[project.urls]
Homepage = "https://github.com/lionel42/pygame-matplotlib-backend"
Repository = "https://github.com/lionel42/pygame-matplotlib-backend"


