[metadata]
name = pygame-matplotlib
version = 0.1
author = Lionel42
description = A matplotlib backend using pygame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lionel42/pygame-matplotlib-backend
project_urls =
    Source Code = https://github.com/lionel42/pygame-matplotlib-backend
    matplotlib = https://matplotlib.org/stable/index.html
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    matplotlib
    pygame >= 2.0.0
python_requires = >=3.9

[options.packages.find]
include_package_data = False