[metadata]
name = pygame-matplotlib
version = 0.2.1
author = Lionel42
description = A matplotlib backend using pygame.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/lionel42/pygame-matplotlib-backend
project_urls =
    Source Code = https://github.com/lionel42/pygame-matplotlib-backend
    matplotlib = https://matplotlib.org/stable/index.html
    pygame = https://www.pygame.org
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    matplotlib
    pygame >= 2.0.0
    pygame_gui
python_requires = >=3.9

[options.packages.find]
include_package_data = False